Remove remaining bits of bindist "make in-place"

--- a/distrib/INSTALL
+++ b/distrib/INSTALL
@@ -2,9 +2,7 @@ This is the INSTALL instructions for a binary distribution of GHC. For
 more details on what on earth this package is up to, please consult
 the README and ANNOUNCE.
 
-This distribution can either be installed in a location of your
-choosing, or it can be used directly in-place (but it needs to be set
-up first, read on).
+This distribution can be installed in a location of your choosing.
 
 To set the ball rolling, run the configure script (as usual, run the
 script with --help to see what options it supports).  eg. to set up
@@ -12,8 +10,7 @@ the package for installing in directory <my-dir>, use
 
 	./configure --prefix=<my-dir>
 
-The default installation directory is /usr/local.  To use GHC
-in-place, the --prefix option can be omitted.
+The default installation directory is /usr/local.
 
 The configure script will figure out what platform you're running on,
 and a couple of other interesting pieces of trivia, which it will then
@@ -21,11 +18,7 @@ fill in the Makefile.in template to give you a real Makefile.  If
 you're of a paranoid persuasion, you might want to take a look at this
 Makefile to see if the information is correct.
 
-To use the software in-place, now run:
-
-	make in-place
-
-or if you're installing,  run
+Now run:
 
 	make install 
 
