Revive External Core parser
Huzzah, the External Core parser will now parse External Core generated by
the HEAD.

Most notably, I rewrote the parser in Parsec, but the old Happy version
remains in the repository.

I checked all the nofib benchmarks and most of the ghc-prim, base and integer
libraries to make sure they parsed; one known bug:
  - Strings like "\x0aE", in which a hex escape code is followed by a
    letter that could be a hex digit, aren't handled properly. I'm 
    investigating whether this is a bug in Parsec or expected behavior.

The checker and interpreter still don't work, but should compile.

Please mess around with the parser, report bugs, improve my code, etc.,
if you're so inclined.

--- a/utils/ext-core/README
+++ b/utils/ext-core/README
@@ -2,10 +2,14 @@ A set of example programs for handling external core format.
 
 In particular, typechecker and interpreter give a precise semantics.
 
-All can be built using, e.g.,
+To build, run "make".
 
-happy -o Parser.hs Parser.y
-ghc --make -package text -fglasgow-exts  -o Driver Driver.hs
+To run the checker and interpreter (which currently aren't working anyway),
+you need to generate External Core for all the base, integer and ghc-prim
+libraries. This can be done by adding "-fext-core" to the GhcLibHcOpts in
+your build.mk file, then running "make" under libraries/.
+Then you need to edit Driver.hs and change "baseDir" to point to your GHC
+libraries directory.
 
-Most recently tested with GHC 6.8.1. I make no claims of portability. --tjc
+Most recently tested with GHC 6.8.2. I make no claims of portability. --tjc
 
